[package]
name = "binary-mirror-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
bytes = "1.5"
rust_decimal = "1.33"
binary-mirror = { path = "binary-mirror" }
binary-mirror-derive = { path = "binary-mirror-derive" }

[workspace]
members = ["binary-mirror", "binary-mirror-derive"]

[dev-dependencies]
cargo-expand = "1.0"
