[package]
name = "binary-mirror-demo"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
binary-mirror = { path = "binary-mirror" }
binary-mirror-derive = { path = "binary-mirror-derive" }

[workspace]
members = ["binary-mirror", "binary-mirror-derive"]
resolver = "2"

[workspace.package]
authors = ["Yvictor <yvictor3141@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Yvictor/binary_mirror"
homepage = "https://github.com/Yvictor/binary_mirror"
rust-version = "1.70"

[dev-dependencies]
cargo-expand = "1.0"
