[package]
name = "binary-mirror-demo"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
binary-mirror = { path = "binary-mirror" }
binary-mirror-derive = { path = "binary-mirror-derive" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.36"
compact_str = { version = "0.8", features = ["serde"] }

[workspace]
members = ["binary-mirror", "binary-mirror-derive"]
resolver = "2"

[workspace.package]
authors = ["Yvictor <yvictor3141@gmail.com>"]
version = "0.1.17"
edition = "2021"
license = "MIT"
repository = "https://github.com/Yvictor/binary_mirror"
homepage = "https://github.com/Yvictor/binary_mirror"
rust-version = "1.70"

[dev-dependencies]
cargo-expand = "1.0"
