[package]
name = "binary-mirror-derive"
version = "0.1.0"
edition = "2021"
description = "Derive macro for parsing fixed-length binary data structures"
license = "MIT"
repository = "https://github.com/yourusername/binary-mirror"
documentation = "https://docs.rs/binary-mirror-derive"
readme = "README.md"
keywords = ["binary", "serialization", "derive", "macro"]
categories = ["encoding", "parsing"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
rust_decimal = "1.36"
chrono = "0.4"
binary-mirror = { version = "0.1.0", path = "../binary-mirror" }

[dev-dependencies]
trybuild = "1.0"
pretty_assertions = "1.4" 