[package]
name = "binary-mirror-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Derive macro for parsing fixed-length binary data structures"
documentation = "https://docs.rs/binary-mirror-derive"
readme = "README.md"
keywords = ["binary", "serialization", "derive", "macro"]
categories = ["encoding", "parsing"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
rust_decimal = "1.36"
chrono = { version = "0.4", features = ["serde"] }
binary-mirror = { version = "0.1.0", path = "../binary-mirror" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
trybuild = "1.0"
pretty_assertions = "1.4" 
serde_json = "1.0"