[package]
name = "binary-mirror"
version = "0.1.0"
edition = "2021"
description = "Core types for binary-mirror derive macro"
license = "MIT"
repository = "https://github.com/yourusername/binary-mirror"
documentation = "https://docs.rs/binary-mirror-core"
readme = "README.md"
keywords = ["binary", "serialization", "derive"]
categories = ["encoding", "parsing"]

[dependencies] 