[package]
name = "binary-mirror"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Core types for binary-mirror derive macro"
documentation = "https://docs.rs/binary-mirror"
readme = "README.md"
keywords = ["binary", "serialization", "derive"]
categories = ["encoding", "parsing"]

[dependencies] 